# NBA_Data

./: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.prefect  README.md  api.py  docker-compose.yml  edwards_pts.csv  main.py  model.py  models.py  pipelines.py  players.py  playground.ipynb  plotting.py  projections.py  pyproject.toml  registration.py  requirements.txt  scraping.py  teams.py  util.py
.github/workflows/: docker-image.yml
