[tool.poetry]
name = "nba-data"
version = "0.1.0"
description = ""
authors = ["prasunnyD <prasun.sharma730@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
nba_api = "^1.6.1"
polars = "^1.12.0"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
buckaroo = "^0.7.11"
duckdb = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
