[tool.poetry]
name = "nba-data"
version = "0.1.0"
description = ""
authors = ["prasunnyD <prasun.sharma730@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nba_api = "^1.6.1"
polars = "^1.12.0"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
buckaroo = "^0.7.11"
duckdb = "^1.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
boto3 = "^1.35.61"
pyarrow = "^18.0.0"
prefect = "^3.1.4"
curl-cffi = "^0.7.4"
fastapi-cache2 = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
